objects/ACE_Customer_MailOut__c.object
<CustomObject>
    <description>This object will hold external email communications, this data will feed into cheetah</description>
    <fields>
        <fullName>Bounced_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Populated by ET response</description>
        <label>Bounced Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_First_Name__c</fullName>
        <formula>Contact__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Last_Name__c</fullName>
        <formula>Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>ACE Customer MailOuts</relationshipLabel>
        <relationshipName>ACE_Customer_MailOuts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Approval_Status__c</fullName>
        <formula>TEXT(PROS_Quote__r.Customer_Approval_Status__c )</formula>
        <label>Customer Approval Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Core_Price_Changes__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Core Price Changes</label>
        <referenceTo>ACE_Customer_Price_Changes__c</referenceTo>
        <relationshipLabel>ACE Customer MailOuts</relationshipLabel>
        <relationshipName>ACE_Customer_MailOuts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_SKU_Changes__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer SKU Changes</label>
        <referenceTo>Ace_Customer_SKU_Changes__c</referenceTo>
        <relationshipLabel>ACE Customer MailOuts</relationshipLabel>
        <relationshipName>ACE_Customer_MailOuts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>ACE Customer MailOuts</relationshipLabel>
        <relationshipName>ACE_Customer_MailOuts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Delivered_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Populated by ET response</description>
        <label>Delivered Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DummyExtId__c</fullName>
        <externalId>true</externalId>
        <label>DummyExtId</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Earliest_Effective_Date10__c</fullName>
        <formula>Sales_Price_Change_Effective_Date_Min__c -10</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Earliest Effective Date10</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Earliest_Effective_Date1__c</fullName>
        <formula>Sales_Price_Change_Effective_Date_Min__c -1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Earliest Effective Date1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email_Delivery_Status__c</fullName>
        <label>Email Delivery Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Key__c</fullName>
        <description>Email Key to Track Response</description>
        <label>Email Key</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Template_Code__c</fullName>
        <label>Email Template Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>New_Sell_Price_Change_Amount_Max__c</fullName>
        <label>New_Sell_Price_%_Change_Amount_Max</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>New_Sell_Price_Change_Amount_Min__c</fullName>
        <label>New_Sell_Price_%_Change_Amount_Min</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Notification_Date__c</fullName>
        <label>Notification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PROS_Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PROS Quote</label>
        <referenceTo>CameleonCPQ__QxQuote__c</referenceTo>
        <relationshipLabel>ACE Customer MailOuts</relationshipLabel>
        <relationshipName>ACE_Customer_MailOuts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rep_Email__c</fullName>
        <label>Rep Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Rep_First_Name__c</fullName>
        <label>Rep First Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rep_Last_Name__c</fullName>
        <label>Rep Last Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rep_Name__c</fullName>
        <label>Rep Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rep_Phone__c</fullName>
        <label>Rep Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Reporting_Accept_Time__c</fullName>
        <formula>IF(ISNULL(Reporting_Accepted_Date__c), 0, (Reporting_Accepted_Date__c - CreatedDate))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reporting Accept Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reporting_Accepted_Date__c</fullName>
        <description>Reporting Purpose</description>
        <label>Reporting Accepted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sales_Price_Change_Effective_Date_Appr__c</fullName>
        <label>Sales_Price_Change_Effective_Date_Appr</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sales_Price_Change_Effective_Date_Min__c</fullName>
        <label>Sales_Price_Change_Effective_Date_Min</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type_Of_Quote__c</fullName>
        <formula>PROS_Quote__r.Type_of_Quote__c</formula>
        <label>Type Of Quote</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <label>ACE Customer MailOut</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ACE Customer MailOuts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>